# rpi-photobox

./: .gitignore  INSTALL.md  README.md
3d-print/: TasterHalterung.FCStd  TasterHalterung.stl  UM2_TasterHalterung.gcode
Archive/: INSTALL.md
Archive/GPIOtestDIO/: RUN_ON_PI.sh
Archive/PhotoBox/: CLEANUP.sh  RUN_ON_PI.sh  nbactions-build-app.xml  pom.xml
Archive/SerialTest/: pom.xml
Projects/GPIOtest/: pom.xml  timestamp.txt
Projects/GPIOtestDIO/: nbactions-build-app.xml  pom.xml
Projects/GPIOtestPi4J/: RUN_ON_PI.sh  pom.xml
Projects/NeoPixelRing35/: UPLOAD.sh  platformio.ini
Projects/PhotoBox/: NATIVE_COMPILE.sh  RUN_ON_PI.sh  nb-configuration.xml  pom.xml  timestamp.txt
Projects/PhotoBox2/: NATIVE_COMPILE.sh  nbactions-default.xml  nbactions.xml  pom-native.xml  pom.xml  pom.xml.1  pom.xml.2  pom.xml.3  pom.xml.4
Projects/ShutdownMonitor/: CMakeLists.txt  README.md  shutdownmonitor.c  shutdownmonitor.h
Projects/ShutterButtonTest1/: build.xml
Projects/gphoto2/: 00-get-sources  000-install-packages  01-autoreconf  02-configure-libgphoto  03-configure-gphoto  MAKE_WORLD.sh
Projects/opencv/: 00-install-packages  01-get-sources  02-unpak-and-configure  03-make
Projects/pictureviewer/: BUILD_NATIVE_APP.sh  BUILD_NATIVE_IMAGE.sh  nb-configuration.xml  nbactions.xml  pom.xml
Scripts/: START_PHOTOBOX.sh  X11_CURSOR_OFF.sh
Scripts/1/: 00-alternatives-java.sh  IPP_STATE.sh  MYVIDEO0_SETTINGS.sh  RESTART_PRINT_SYSTEM.sh  TAKE_PICTURE.sh  state.ipp
Scripts/2/: CLEANUP.sh  FIND_PRINTER.sh  RSYNC_TO_USBSTICK.sh  STARTUP.sh  START_PHOTOBOX.sh  (+3 more)
(+96 files in other folders)
